# EdenDB

./: Cargo.toml  DIARY.md  README.md  shell.nix
editor/vim/ftdetect/: edl.vim
editor/vim/syntax/: edl.vim
example-project/: Cargo.toml  compile  example.edl
example-project/src/: database.rs  main.rs
examples/ocaml-data-module/: compile  example.edl
examples/ocaml-data-module/ocaml-module/: dune-project  shell.nix
examples/ocaml-data-module/src/: database.rs
examples/rust-project/src/: main.rs
src/: cli.rs  db_parser.rs  lib.rs  main.rs
src/checker/: errors.rs  logic.rs  mod.rs  types.rs
src/checker/tests/: child_foreign_keys.rs  child_keys_and_foreign_keys.rs  common.rs  common_parent_fkeys.rs  datalog_proofs.rs  detached_defaults.rs  integration.rs  lua_column_checks.rs  lua_data_insertion.rs  lua_generated_columns.rs  lua_multifile.rs  main.rs  mod.rs  regression.rs  replacements.rs  sql_materialized_views.rs  sql_proofs.rs  struct_statement.rs  with_statement.rs
src/codegen/: mod.rs  ocaml.rs  ocaml_data_module.rs  rust.rs  rust_sketch_db.rs
src/codegen/ocaml_sketch_module/: dune-project  shell.nix
