[package]
name = "edendb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "edendb"
path = "src/lib.rs"

[[bin]]
name = "edendb"
path = "src/main.rs"

[dependencies]
nom = "7"
regex = "1.5.6"
lazy_static = "1.4.0"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
assert-json-diff = "2.0.2"
mlua = { version = "0.8.1", features = ["luajit", "vendored"] }
once_cell = "1.13.0"
asdi = { path = "third-party/rust-asdi", optional = true }
rusqlite = { path = "third-party/rusqlite", features = ["bundled", "backup"] }
rand = "0.8.5"
clap = { version = "3.2.15", features = ["derive"] }
convert_case = "0.5.0"
bincode = "1.3.3"
lz4_flex = { version = "0.9.3", default-features = false, features = ["checked-decode"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
nom_locate = "4.2.0"
pretty_assertions = "1.4.0"

[features]
datalog = ["dep:asdi"]
