[package]
name = "tst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.140", features = ["derive"] }
lazy_static = "1.4.0"
lz4_flex = { version = "0.9.3", default-features = false, features = ["checked-decode"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
